[package]
name = "planner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version="0.4.38", features=["serde"]}
clap = { version = "4.5.17", features = ["derive"] }
serde = { version = "1.0.210", features = ["derive"]}
toml = "0.8.19"
